// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoritesToolTip component should match Anonymous tooltip snapshot 1`] = `
<DocumentFragment>
  .c0 {
  padding: 1rem;
  min-width: 18rem;
  border: 0.0625rem solid #9e9e9e;
  background: #fff;
  border-radius: 0.25rem;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.4);
}

.c1 {
  margin-bottom: 1rem;
  font-family: "AzoSansRegular","Helvetica Neue",Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  font-size: 0.938rem;
}

.c3 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  cursor: pointer;
  padding: 0;
  height: 0.75rem;
  width: 0.75rem;
}

.c4 {
  width: 0.75rem;
  height: 0.75rem;
}

.c5 {
  font-size: 0.875rem;
}

.c6 {
  color: #257f39;
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          Favourites
        </div>
        <button
          class="c3"
          data-testid="product-summary-favourite-tooltip-close"
        >
          <img
            alt="Continue shopping"
            class="c4"
            src="/static-content/icons/shared/close.svg"
          />
        </button>
      </div>
      <div
        class="c5"
        data-testid="product-summary-favourite-anonymous-tooltip"
      >
        <a
          class="c6"
          href="www.amido.mx/secure/accounts/transfer"
        >
          Sign in
        </a>
         or 
        <a
          class="c6"
          href="www.amido.mx/secure/accounts/register"
        >
          Register
        </a>
         an account to save these items permanently.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FavoritesToolTip component should match Authenticated tooltip snapshot 1`] = `
<DocumentFragment>
  .c0 {
  padding: 1rem;
  min-width: 18rem;
  border: 0.0625rem solid #9e9e9e;
  background: #fff;
  border-radius: 0.25rem;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.4);
}

.c1 {
  margin-bottom: 1rem;
  font-family: "AzoSansRegular","Helvetica Neue",Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  font-size: 0.938rem;
}

.c3 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  cursor: pointer;
  padding: 0;
  height: 0.75rem;
  width: 0.75rem;
}

.c4 {
  width: 0.75rem;
  height: 0.75rem;
}

.c5 {
  font-size: 0.875rem;
}

.c7 {
  color: #257f39;
}

.c6 {
  margin-bottom: 0.2rem;
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          Favourites
        </div>
        <button
          class="c3"
          data-testid="product-summary-favourite-tooltip-close"
        >
          <img
            alt="Continue shopping"
            class="c4"
            src="/static-content/icons/shared/close.svg"
          />
        </button>
      </div>
      <div
        class="c5"
        data-testid="product-summary-favourite-authenticated-tooltip"
      >
        This item has been added to
        <br />
         dummyUser's 
        <strong>
          favourites list.
        </strong>
        <p
          class="c6"
        >
          Not dummyUser? 
          <a
            class="c7"
            href="www.amido.mx/secure/accounts/transfer"
          >
            Sign out
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FavoritesToolTip component should not show tooltip when click to close button 1`] = `<DocumentFragment />`;

exports[`FavoritesToolTip component should not show tooltip when isProductFavourited is false 1`] = `<DocumentFragment />`;
